Flickering fixed v1 - static symbol

--- a/css/style.css
+++ b/css/style.css
@@ -59,10 +59,6 @@ nav .button {
   color: var(--text-color);
 }
 
-nav .darkmode {
-  width: 55px;
-}
-
 .mainContainer{
   position: relative;
   display: flex;
